tests/sumo/devices/rerouting/assignment/errors/disconnect_ignore/errors.sumo.meso
Warning: No connection between edge 'left' and edge 'middle' found.
Warning: No route for vehicle '0' found.
Warning: Teleporting vehicle '0'; waited too long, from edge 'left':9 to edge 'middle':1, time=337.19.
